--- a/views/room.ejs
+++ b/views/room.ejs
@@ -18,9 +18,15 @@
 <body>
     <h1>In the room.... ooohoooooo</h1>
     <h4>Share Room Id : <%=roomid %></h4>
-    <audio src="ringtone.mp3" id="ringtone" controls></audio>
-    <button onclick="handleplaysound()">play sound</button>
-    <button onclick="handlepausesound()">pause sound</button>
+
+    <audio src="ringtone.mp3" id="btn-1-audio">jack sparrow</audio>
+    <button onclick="handleplaysound(id)" type="button" id="btn-1">play sound</button>
+    <button onclick="handlepausesound(id)" type="button" id="btn-1-">pause sound</button>
+<br><hr>
+    <audio src="iphone.mp3" id="btn-2-audio">iphone</audio>
+    <button onclick="handleplaysound(id)" type="button" id="btn-2">play sound</button>
+    <button onclick="handlepausesound(id)" type="button" id="btn-2-">pause sound</button>
+
     <main class="chat-main">
         <div class="chat-sidebar">
             <h3><i class="fas fa-comments"></i> Room Name:</h3>
