server side code updated by cg

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -10,9 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap" rel="stylesheet">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script>
         const roomid = "<%= roomid %>"
@@ -30,7 +33,9 @@
 
     <div class="roomid-box">
         <span class="roomid-text">Room Id :</span>
-        <span class="roomid"><%= roomid %></span>
+        <span class="roomid">
+            <%= roomid %>
+        </span>
     </div>
 
     <div class="container data-box">
@@ -39,44 +44,56 @@
                 <div class="container-fluid music-grid-container">
                     <div class="row music-grid justify-content-center">
                         <div class="col-3 music-song">
+                            <audio src="ringtone.mp3" id="btn-1-audio"></audio>
                             <img src="img/born-to-shine.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Born To Shine - Diljit Dosanjh</span>
                             <div class="play-btn-layover"></div>
-                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon">
+                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon" onclick="handleplaysound(id)" id="btn-1">
+                            <img src="icons/pause.png" alt="play-btn-icon" class="play-btn-icon d-none" onclick="handlepausesound(id)" id="btn-1-">
                         </div>
                         <div class="col-3 music-song">
+                            <audio src="ringtone.mp3" id="btn-2-audio"></audio>
                             <img src="img/big-liar.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Bad Liar - Imagine Dragons</span>
                             <div class="play-btn-layover"></div>
-                            <img src="icons/pause.png" alt="play-btn-icon" class="play-btn-icon">
+                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon" onclick="handleplaysound(id)" id="btn-2">
+                            <img src="icons/pause.png" alt="play-btn-icon" class="play-btn-icon d-none" onclick="handlepausesound(id)" id="btn-2-">
                         </div>
                         <div class="col-3 music-song">
+                            <audio src="ringtone.mp3" id="btn-3-audio"></audio>
                             <img src="img/safar.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Safar - Bhuvan Bam</span>
                             <div class="play-btn-layover"></div>
-                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon">
+                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon" onclick="handleplaysound(id)" id="btn-3">
+                            <img src="icons/pause.png" alt="play-btn-icon" class="play-btn-icon d-none" onclick="handlepausesound(id)" id="btn-3-">
                         </div>
                     </div>
                     <div class="row music-grid justify-content-center">
                         <div class="col-3 music-song">
+                            <audio src="ringtone.mp3" id="btn-4-audio"></audio>
                             <img src="img/ranveer.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Utth Jaa Rey - Jasleen Royal</span>
                             <div class="play-btn-layover"></div>
-                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon">
+                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon" onclick="handleplaysound(id)" id="btn-4">
+                            <img src="icons/pause.png" alt="play-btn-icon" class="play-btn-icon d-none" onclick="handlepausesound(id)" id="btn-4-">
 
                         </div>
                         <div class="col-3 music-song">
+                            <audio src="ringtone.mp3" id="btn-5-audio"></audio>
                             <img src="img/jassManak.jpeg" alt="song-image" class="song-img">
                             <span class="song-name">No Competition - Jass Manak | Divine</span>
                             <div class="play-btn-layover"></div>
-                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon">
+                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon" onclick="handleplaysound(id)" id="btn-5">
+                            <img src="icons/pause.png" alt="play-btn-icon" class="play-btn-icon d-none" onclick="handlepausesound(id)" id="btn-5-">
 
                         </div>
                         <div class="col-3 music-song">
+                            <audio src="ringtone.mp3" id="btn-6-audio"></audio>
                             <img src="img/maroon5.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Nobody's Love - Maroon 5</span>
                             <div class="play-btn-layover"></div>
-                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon">
+                            <img src="icons/play.png" alt="play-btn-icon" class="play-btn-icon" onclick="handleplaysound(id)" id="btn-6">
+                            <img src="icons/pause.png" alt="play-btn-icon" class="play-btn-icon d-none" onclick="handlepausesound(id)" id="btn-6-">
 
                         </div>
                     </div>
@@ -90,41 +107,20 @@
 
                 <div class="people d-none">
                     <div class="people-list">
-                        <ol>
-                            <li>james clear</li>
-                            <li>ali abdaal</li>
-                            <li>samuel murph</li>
-                        </ol>
+                        <ol id="users"></ol>
                     </div>
                 </div>
-                <div class="msg-section d-flex flex-column-reverse">
-                    <div class="msg-area">
-                        <span class="sender">Govind Tomar</span>
-                        <span class="time">4:34pm</span>
-                        <p class="msg">Hey there, I'm using SyncM. It's going pretty well. we are here to appreciate you.</p>
-                    </div>
+                <div class="msg-section d-flex flex-column-reverse" id="chat-messages">
 
-                    <div class="msg-area">
-                        <span class="sender">Govind Tomar</span>
-                        <span class="time">4:30pm</span>
-                        <p class="msg">Hey there, I'm using SyncM. It's going pretty well. we are here to appreciate you.</p>
-                    </div>
-
-                    <div class="msg-area">
-                        <span class="sender">Govind Tomar</span>
-                        <span class="time">4:28pm</span>
-                        <p class="msg">Hey there, I'm using SyncM. It's going pretty well. we are here to appreciate you.</p>
-                    </div>
-
-                    <div class="msg-area">
-                        <span class="sender">Govind Tomar</span>
-                        <span class="time">4:25pm</span>
-                        <p class="msg">Hey there, I'm using SyncM. It's going pretty well. we are here to appreciate you.</p>
-                    </div>
                 </div>
                 <div class="write-msg row">
                     <div class="input-box col-9">
-                        <input type="text" class="input-text" placeholder="Type your Message">
+                        <form id="chat-form">
+                            <input type="text" class="input-text" placeholder="Type your Message" id="msg" required
+                                autocomplete="off">
+                            <button class="btn"> Send</button>
+                        </form>
+
                     </div>
                     <div class="send-btn-box col-3">
                         <img src="icons/send.png" alt="send-btn" class="send-btn">
@@ -132,32 +128,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <audio src="ringtone.mp3" id="btn-1-audio">jack sparrow</audio>
-    <button onclick="handleplaysound(id)" type="button" id="btn-1">play sound</button>
-    <button onclick="handlepausesound(id)" type="button" id="btn-1-">pause sound</button>
-    <br>
-    <hr>
-    <audio src="iphone.mp3" id="btn-2-audio">iphone</audio>
-    <button onclick="handleplaysound(id)" type="button" id="btn-2">play sound</button>
-    <button onclick="handlepausesound(id)" type="button" id="btn-2-">pause sound</button>
-
-    <main class="chat-main">
-        <div class="chat-sidebar">
-            <h3><i class="fas fa-comments"></i> Room Name:</h3>
-            <h2 id="room-name"></h2>
-            <h3><i class="fas fa-users"></i> Users</h3>
-            <ul id="users"></ul>
-        </div>
-        <div class="chat-messages"></div>
-    </main>
-
-    <div class="chat-form-container">
-        <form id="chat-form">
-            <input id="msg" type="text" placeholder="Enter Message" required autocomplete="off" />
-            <button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
-        </form>
     </div>
 </body>
 
