--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,15 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>In the home page</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="homepage.css">
+    <title>SyncM - Home Page</title>
 </head>
 
 <body>
-    <h1>It is the homepage.</h1>
+    <nav class="navbar-roomPage">
+        <h1 class="logo">SyncM</h1>
+    </nav>
+
+    <h1 class="about">
+        A Music Syncing Web App to have the experience of boosted audio.
+    </h1>
+
+    <main class="room-section container">
+        <div class="row room-row justify-content-center">
+            <div class="col-4 create-room">
+                <h1 class="create-room-heading">create room</h1>
+                <form action="/createRoom" method="POST">
+                    <button class="create-btn" type="submit">generate room id</button>
+                </form>
+            </div>
+            <div class="col-4 join-room">
+                <h1 class="join-room-heading">join room</h1>
+                <form action="/joinRoom" method="POST">
+                    <input type="text" id="roomid" class="input-roomid" name="roomid" placeholder="enter room id" required>
+                    <br>
+                    <button class="join-btn" type="submit">join room</button>
+                </form>
+            </div>
+        </div>
+    </main>
+
+    <h1 style="margin-top: 20rem;">It is the homepage.</h1>
     <h3>For creating Room</h3>
     <form action="/createRoom" method="POST">
         <h3>press button to create room</h3>
-        <button type="submit" class="btn">creatRoom</button>
+        <button type="submit">creatRoom</button>
     </form>
 
     <h3>For joining Room</h3>
