--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,16 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>In the Room!!</title>
+    <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap" rel="stylesheet">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script>
         const roomid = "<%= roomid %>"
@@ -101,8 +99,8 @@
             </div>
             <div class="col-3 chatbot">
                 <div class="row headings">
-                    <div class="col-6 heading-chat">chat</div>
-                    <div class="col-6 headig-participants">people</div>
+                    <div class="col-6 heading-chat current-tab">chat</div>
+                    <div class="col-6 heading-people">people</div>
                 </div>
 
                 <div class="people d-none">
@@ -113,22 +111,18 @@
                 <div class="msg-section d-flex flex-column-reverse" id="chat-messages">
 
                 </div>
-                <div class="write-msg row">
-                    <div class="input-box col-9">
-                        <form id="chat-form">
-                            <input type="text" class="input-text" placeholder="Type your Message" id="msg" required
-                                autocomplete="off">
-                            <button class="btn"> Send</button>
-                        </form>
-
-                    </div>
-                    <div class="send-btn-box col-3">
-                        <img src="icons/send.png" alt="send-btn" class="send-btn">
-                    </div>
+                <div class="write-msg">
+                    <form id="chat-form" class="send-msg-form">
+                        <input type="text" class="input-text" placeholder="Type your Message" id="msg" required autocomplete="off">
+                        <button class="btn send-btn"><ion-icon name="send-sharp" class="send-icon"></ion-icon></button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- IONICONS LIBRARY -->
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </body>
 
 </html>
